# CSV-Cleaner-Pro

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml
assets/samples/: sample_clean.csv  sample_dirty.csv
csv_cleaner/: cli.py  core.py
data/raw/: sales_dirty.csv  test_case_2.csv  test_case_3.csv  test_case_5_dates.csv
notebooks/: CSV_Cleaner_Pro_Dev.ipynb
scripts/: app.py  clean_sales_data.py  cli.py
tests/tests/: test_smoke.py
